<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_weight="40"
        android:contentDescription="@string/the_image_of_an_item"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:hint="@string/title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:hint="@string/description"
            android:maxLines="6"
            android:textColor="@color/colorDescription"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/creationDateTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="end|bottom"
            android:hint="@string/creation_date_and_time"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
