<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:layout_weight="9">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="top">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center"
                android:contentDescription="@string/the_image_of_an_item"
                android:onClick="chooseImage"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/change_image"
                android:textSize="24sp"
                android:textStyle="bold" />
        </FrameLayout>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:autofillHints="text"
            android:background="@android:color/white"
            android:gravity="start|center"
            android:hint="@string/title_24_characters"
            android:inputType="textCapWords"
            android:maxLength="16"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_gravity="bottom"
            android:autofillHints="text"
            android:background="@android:color/white"
            android:gravity="start"
            android:hint="@string/description_128_characters"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLength="128"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text=""
            android:textColor="@color/colorDescription"
            android:textColorHint="@color/colorHint"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/saveItemButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:onClick="saveItem"
            android:text="@string/save_item"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>